BP-2853 PayByBank bank selection issue on mobile devices

--- a/view/frontend/web/css/styles.css
+++ b/view/frontend/web/css/styles.css
@@ -601,6 +601,7 @@
         order: 1;
         margin:0 10px;
         flex: 0;
+        min-width: 13px;
     }
 }
 @media screen and (min-width: 768px) {
